<resources>
    <string name="app_name">CoPilot</string>
    <string name="your_trips">Your Trips</string>
    <string name="past_trips">Past Trips</string>
    <string name="user_name">Name</string>
    <string name="user_rating">Rating</string>
    <string name="more_info">+ More Info</string>
    <string name="user_pickup">Pickup</string>
    <string name="user_destination">Destination</string>
    <string name="user_date">Date</string>
    <string name="user_time">Time</string>
    <string name="departure_tag">Departing From</string>
    <string name="travel_tag">Travelling To</string>
    <string name="departing_tag">Departing At</string>
    <string name="estimate_arrival">Estimated Arrival</string>
    <string name="facebook_app_id">1820782894602314</string>
    <string name="fb_login_protocol_scheme">fb1820782894602314</string>
    <string name="rider_pool_go_back_button_text">&lt; Back to Trip</string>
    <string name="role_list_departure_tag">Travelled To</string>
    <string name="role_list_source_tag">Departed From</string>
    <string name="role_list_travel_time_tag">Travelled At</string>
</resources>
