<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#222F2F"
        android:paddingStart="20dp"
        android:paddingLeft="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/departure_tag"
                android:textColor="#ffffff"
                android:layout_marginTop="20dp"
                android:textSize="6pt"/>

            <TextView
                android:id="@+id/departure_field_for_trip_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Fairview Mall, Toronto"
                android:textColor="#ffffff"
                android:layout_marginTop="5dp"
                android:textSize="8pt"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/travel_tag"
                android:textColor="#ffffff"
                android:layout_marginTop="20dp"
                android:textSize="6pt"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="University of Waterloo"
                android:id="@+id/travel_field_for_trip_details"
                android:textColor="#ffffff"
                android:layout_marginTop="5dp"
                android:textSize="8pt"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/departing_tag"
                android:textColor="#ffffff"
                android:layout_marginTop="20dp"
                android:textSize="6pt"/>

            <TextView
                android:id="@+id/departing_field_for_trip_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="4:00pm June 15th"
                android:textColor="#ffffff"
                android:layout_marginTop="5dp"
                android:textSize="8pt"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>