<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/riderImage"
            android:src="@drawable/rider_image"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/driverName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:text="@string/user_name"
                        android:textColor="@color/white"
                        android:textSize="24sp"/>

                </RelativeLayout>

                    <!-- TODO: implement the 3 dots icon here as a button -->

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="2dp">


                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/location_marker"
                    android:layout_marginRight="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_pickup"
                    android:textColor="@color/white"
                    android:id="@+id/pickup"
                    android:textSize="16sp"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="2dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/location_marker"
                    android:layout_marginRight="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_destination"
                    android:textColor="@color/white"
                    android:id="@+id/destination"
                    android:textSize="16sp"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="2dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/clock"
                    android:layout_marginRight="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_time"
                    android:textColor="@color/white"
                    android:id="@+id/pickup_time"
                    android:textSize="16sp"/>

            </LinearLayout>

        </LinearLayout>

        <ImageButton
            android:id="@+id/request_button"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/chat_filled"
            android:background="@color/darkBackground"/>

    </LinearLayout>
