<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--</LinearLayout>-->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#222F2F"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <ImageButton
            android:id="@+id/member_button"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:scaleType="fitXY"
            android:src="@drawable/cat"
            android:background="#00000000"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:paddingBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/role_list_departure_tag"
                    android:textColor="#ffffff"
                    android:textSize="6pt"/>

                <TextView
                    android:id="@+id/destination"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:textSize="8pt"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:paddingBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/role_list_source_tag"
                    android:textColor="#ffffff"
                    android:textSize="6pt"/>

                <TextView
                    android:id="@+id/source"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:textSize="8pt"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:paddingBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/role_list_travel_time_tag"
                    android:textColor="#ffffff"
                    android:textSize="6pt"/>

                <TextView
                    android:id="@+id/travel_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:textSize="8pt"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>